tests/paczka1/fuzzy1/24923677.err
Error in line 5: 2JaVx A629 97,74
Error in line 1: t9BLKsI3 A629 7,1
Error in line 26: yfcpXBCx A158 140,6
